src/test/ui/no-link.stderr
warning: proc macro crates and `#[no_link]` crates have no effect without `#[macro_use]`
  --> $DIR/no-link.rs:14:1
   |
LL | extern crate empty_struct;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0425]: cannot find value `XEmpty1` in module `empty_struct`
  --> $DIR/no-link.rs:18:19
   |
LL |     empty_struct::XEmpty1; //~ ERROR cannot find value `XEmpty1` in module `empty_struct`
   |                   ^^^^^^^ not found in `empty_struct`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0425`.
